--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "homepage": "https://github.com/sandersn/dts-critic#readme",
   "devDependencies": {
+    "@types/jest": "^24.0.0",
     "@types/node": "^10.12.21",
-    "@types/yargs": "^12.0.8"
+    "@types/yargs": "^12.0.8",
+    "jest": "^24.1.0"
   }
 }
