--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "@types/jest": "^24.0.0",
         "@types/node": "^10.12.21",
         "@types/request-promise-native": "^1.0.15",
+        "@types/strip-json-comments": "0.0.30",
         "@types/yargs": "^12.0.8",
-        "jest": "^24.1.0"
+        "jest": "^24.1.0",
+        "strip-json-comments": "^2.0.1"
     }
 }
