--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dts-critic",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": "Nathan Shively-Sandersn <nathansa@microsoft.com> (https://github.com/Microsoft/TypeScript)",
     "description": "Checks a new .d.ts against the Javascript source and tells you what problems it has",
     "dependencies": {
@@ -9,6 +9,7 @@
         "yargs": "^12.0.5"
     },
     "main": "index.js",
+    "types": "index.d.ts",
     "scripts": {
         "test": "jest",
         "dt": "node dt.js"
