--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Checks a new .d.ts against the Javascript source and tells you what problems it has",
     "dependencies": {
         "definitelytyped-header-parser": "^1.0.1",
-        "request-promise-native": "^1.0.5",
+        "download-file-sync": "^1.0.4",
         "yargs": "^12.0.5"
     },
     "main": "index.js",
@@ -33,7 +33,6 @@
     "devDependencies": {
         "@types/jest": "^24.0.0",
         "@types/node": "^10.12.21",
-        "@types/request-promise-native": "^1.0.15",
         "@types/strip-json-comments": "0.0.30",
         "@types/yargs": "^12.0.8",
         "jest": "^24.1.0",
