--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "definitelytyped-header-parser": "^1.2.0",
         "download-file-sync": "^1.0.4",
+        "semver": "^6.2.0",
         "yargs": "^12.0.5"
     },
     "main": "index.js",
@@ -33,6 +34,7 @@
     "devDependencies": {
         "@types/jest": "^24.0.0",
         "@types/node": "^10.12.21",
+        "@types/semver": "^6.0.1",
         "@types/strip-json-comments": "0.0.30",
         "@types/yargs": "^12.0.8",
         "jest": "^24.7.1",
