--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "command-exists": "^1.2.8",
         "definitelytyped-header-parser": "^3.8.2",
         "semver": "^6.2.0",
+        "typescript": "^3.7.5",
         "yargs": "^12.0.5"
     },
     "main": "dist/index.js",
