Convert JS to TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,13 @@
     "target": "esnext",
     "module": "commonjs",
     "resolveJsonModule": true,
-    "strict": true
-  }
+    "strict": true,
+    "sourceMap": true,
+    "outDir": "out",
+    "declaration": true,
+  },
+  "exclude": [
+    "sources/*",
+    "out/*",
+  ]
 }
