--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "semver": "^6.2.0",
         "yargs": "^12.0.5"
     },
-    "main": "index.js",
-    "types": "index.d.ts",
+    "main": "out/index.js",
+    "types": "out/index.d.ts",
     "scripts": {
         "test": "jest",
         "dt": "node dt.js"
