--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
         "semver": "^6.2.0",
         "yargs": "^12.0.5"
     },
-    "main": "out/index.js",
-    "types": "out/index.d.ts",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
         "test": "jest",
-        "dt": "node dt.js"
+        "dt": "node dist/dt.js"
     },
     "repository": {
         "type": "git",
@@ -32,12 +32,19 @@
     },
     "homepage": "https://github.com/sandersn/dts-critic#readme",
     "devDependencies": {
+        "@types/command-exists": "^1.2.0",
+        "@types/gulp": "^4.0.6",
         "@types/jest": "^24.0.0",
-        "@types/node": "^10.12.21",
+        "@types/node": "^13.1.8",
+        "@types/npm": "^2.0.31",
         "@types/semver": "^6.0.1",
         "@types/strip-json-comments": "0.0.30",
         "@types/yargs": "^12.0.8",
+        "gulp": "^4.0.2",
+        "gulp-typescript": "^5.0.1",
+        "typescript": "^3.7.5",
         "jest": "^24.7.1",
+        "jest-cli": "^24.9.0",
         "strip-json-comments": "^2.0.1"
     }
 }
