--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
     "resolveJsonModule": true,
     "strict": true,
     "sourceMap": true,
-    "outDir": "out",
+    "outDir": "dist",
     "declaration": true,
+    "esModuleInterop": true,
   },
   "exclude": [
     "sources/*",
-    "out/*",
+    "dist/*",
   ]
 }
