--- a/package.json
+++ b/package.json
@@ -45,6 +45,14 @@
         "typescript": "^3.7.5",
         "jest": "^24.7.1",
         "jest-cli": "^24.9.0",
-        "strip-json-comments": "^2.0.1"
+        "strip-json-comments": "^2.0.1",
+        "@typescript-eslint/eslint-plugin": "^2.3.2",
+        "@typescript-eslint/experimental-utils": "^2.3.2",
+        "@typescript-eslint/parser": "^2.3.2",
+        "eslint": "^6.5.1",
+        "eslint-formatter-autolinkable-stylish": "^1.0.3",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsdoc": "^15.9.9",
+        "eslint-plugin-no-null": "^1.0.2"
     }
 }
