--- a/package.json
+++ b/package.json
@@ -40,12 +40,6 @@
         "@types/semver": "^6.0.1",
         "@types/strip-json-comments": "0.0.30",
         "@types/yargs": "^12.0.8",
-        "gulp": "^4.0.2",
-        "gulp-typescript": "^5.0.1",
-        "typescript": "^3.7.5",
-        "jest": "^24.7.1",
-        "jest-cli": "^24.9.0",
-        "strip-json-comments": "^2.0.1",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
         "@typescript-eslint/experimental-utils": "^2.3.2",
         "@typescript-eslint/parser": "^2.3.2",
@@ -53,6 +47,12 @@
         "eslint-formatter-autolinkable-stylish": "^1.0.3",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsdoc": "^15.9.9",
-        "eslint-plugin-no-null": "^1.0.2"
+        "eslint-plugin-no-null": "^1.0.2",
+        "gulp": "^4.0.2",
+        "gulp-typescript": "^5.0.1",
+        "typescript": "^3.7.5",
+        "jest": "^24.7.1",
+        "jest-cli": "^24.9.0",
+        "strip-json-comments": "^2.0.1"
     }
 }
