Add new checks (#15)
* Create exports checking script

* Minor refactor

* Add new checks to index.ts.

* Rename file

* Minor fixes

* Fix test

* Add option to format result as json

* Update readme

* Nits

* Turn off js exports property check by default

* Fixes

* More nits

* Use enum

* Fixes

* Improve error messages

* More fixes

* More fixes

* Change dtsCritic options

* Change function and error names

* Add mode option to CLI and move some things

* Update readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
-    "target": "esnext",
+    "target": "es2019",
     "module": "commonjs",
     "resolveJsonModule": true,
     "strict": true,
@@ -13,5 +13,7 @@
   },
   "exclude": [
     "dist/*",
+    "sources/*",
+    "testsource/*",
   ]
 }
