--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "test": "jest",
+        "test": "npm run build && jest",
         "build": "tsc",
         "dt": "node dist/dt.js"
     },
@@ -35,7 +35,6 @@
     "homepage": "https://github.com/sandersn/dts-critic#readme",
     "devDependencies": {
         "@types/command-exists": "^1.2.0",
-        "@types/gulp": "^4.0.6",
         "@types/jest": "^24.0.0",
         "@types/node": "12.0.x",
         "@types/semver": "^6.0.1",
@@ -49,10 +48,7 @@
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsdoc": "^15.9.9",
         "eslint-plugin-no-null": "^1.0.2",
-        "gulp": "^4.0.2",
-        "gulp-typescript": "^5.0.1",
         "jest": "^24.7.1",
-        "jest-cli": "^24.9.0",
         "strip-json-comments": "^2.0.1"
     }
 }
