--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "dist",
     "declaration": true,
     "esModuleInterop": true,
+    "noImplicitReturns": true,
   },
   "exclude": [
     "dist/*",
