--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
         "eslint-plugin-no-null": "^1.0.2",
         "jest": "^24.7.1",
         "strip-json-comments": "^2.0.1"
+    },
+    "engines": {
+        "node": ">=12.0.0"
     }
 }
