--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "devDependencies": {
         "@types/command-exists": "^1.2.0",
         "@types/jest": "^24.0.0",
-        "@types/node": "12.0.x",
+        "@types/node": "~10.17.0",
         "@types/semver": "^6.0.1",
         "@types/strip-json-comments": "0.0.30",
         "@types/yargs": "^12.0.8",
@@ -50,5 +50,8 @@
         "eslint-plugin-no-null": "^1.0.2",
         "jest": "^24.7.1",
         "strip-json-comments": "^2.0.1"
+    },
+    "engines": {
+        "node": ">=10.17.0"
     }
 }
