--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "eslint-plugin-jsdoc": "^15.9.9",
         "eslint-plugin-no-null": "^1.0.2",
         "jest": "^24.7.1",
-        "strip-json-comments": "^2.0.1"
+        "strip-json-comments": "^2.0.1",
+        "dtslint-runner": "github:DefinitelyTyped/dtslint-runner#master"
     },
     "engines": {
         "node": ">=10.17.0"
