--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,11 +16,14 @@ jobs:
     inputs:
       verbose: false
 
-  - script: 'ls node_modules/@types && cat node_modules/dtslint-runner/package.json && rm -r node_modules/dts-critic && ln -s "$(pwd)" node_modules/dts-critic'
-    displayName: 'ln -s "$(pwd)" node_modules/dts_critic'
+  - script: 'cat package-lock.json && ls node_modules/@types && cat node_modules/dtslint-runner/package.json'
+    displayName: 'Test'
+
+  - script: 'rm -r node_modules/dts-critic && ln -s "$(pwd)" node_modules/dts-critic'
+    displayName: 'Replace dts-critic'
 
   - script: 'node node_modules/typescript/lib/tsc.js --project node_modules/dtslint-runner && node node_modules/dtslint-runner/bin/index.js --clone --onlyTestTsNext'
-    displayName: 'node node_modules/dtslint-runner/bin/index.js --clone --onlyTestTsNext'
+    displayName: 'Run dtslint-runner'
 
 pr:
 - master
