--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "command-exists": "^1.2.8",
         "definitelytyped-header-parser": "^3.8.2",
+        "rimraf": "^3.0.2",
         "semver": "^6.2.0",
         "typescript": "^3.7.5",
         "yargs": "^12.0.5"
@@ -37,6 +38,7 @@
         "@types/command-exists": "^1.2.0",
         "@types/jest": "^24.0.0",
         "@types/node": "~10.17.0",
+        "@types/rimraf": "^3.0.0",
         "@types/semver": "^6.0.1",
         "@types/strip-json-comments": "0.0.30",
         "@types/yargs": "^12.0.8",
