--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "command-exists": "^1.2.8",
         "rimraf": "^3.0.2",
         "semver": "^6.2.0",
+        "tmp": "^0.2.1",
         "typescript": "^3.9.2",
         "yargs": "^12.0.5"
     },
@@ -41,6 +42,7 @@
         "@types/rimraf": "^3.0.0",
         "@types/semver": "^6.0.1",
         "@types/strip-json-comments": "0.0.30",
+        "@types/tmp": "^0.2.0",
         "@types/yargs": "^12.0.8",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
         "@typescript-eslint/experimental-utils": "^2.3.2",
