Add prepublishOnly script
I've forgotten to build before publishing twice since this package
switched to Typescript.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "scripts": {
         "test": "npm run build && jest",
         "build": "tsc",
-        "dt": "node dist/dt.js"
+        "dt": "node dist/dt.js",
+        "prepublishOnly": "npm run build && npm run test"
     },
     "repository": {
         "type": "git",
